Bug 511951. Don't hide the inner view of a subdocument frame's hidden view. r=dbaron